--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -51,15 +51,17 @@
 		}
 	}
 
-	.page-controls {
-		margin: -5px;
+	.page-buttons {
+		margin: -10px -5px 15px -5px;
+		text-align: center;
 	}
 
 	.pagination {
 		list-style: none;
-		margin: 10px 0 0 -5px;
+		margin: 0 0 25px -5px;
 		padding: 0;
 		font-size: 0.9em;
+		text-align: center;
 		
 		li {
 			display: inline-block;
@@ -326,13 +328,40 @@ nav.section-menu {
 			margin-top: 0;
 		}
 
-		.page-controls {
+		.page-buttons {
 			float: right;
-			margin: 0 -5px 8px 0;
+			margin: -45px -5px 8px 0;
+		}
+		
+		.pagination {
+			text-align: center;
+			margin: 0 -5px 25px -5px;
 		}
 
-		.pagination {
-			float: left;
+		.page-controls {
+			margin-top: -20px;
+
+			.page-buttons {
+				margin-top: 0;
+			}
+
+			.pagination {
+				float: left;
+				text-align: left;
+				margin: 10px -5px 0 -5px;
+			}
+
+			.pagination + .page-buttons {
+				margin-top: 0;
+			}
+		}
+
+		header + .page-controls {
+			margin-top: -20px;
+
+			.page-buttons {
+				margin-top: -30px;
+			}
 		}
 	}
 
